gitops/app/base/tools/kdigger.yaml
apiVersion: v1
kind: Pod
metadata:
  name: toolbox
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: box
      image: mtardy/koolbox:v0.1.4
      args:
        - "kdigger dig all && sleep infinity"
