gitops/app/base/tools/allowrepo.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: repo-is-openpolicyagent
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "default"
  parameters:
    repos:
      - "openpolicyagent/"
      - "k8s.gcr.io/"
      - "us-central1-docker.pkg.dev/clgcporg10-170/sec-app/"
